--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "themes/cocoa"]
 	path = themes/cocoa
-	url = https://github.com/nishanths/cocoa-hugo-theme.git
+	url = git@github.com:berquist/cocoa-hugo-theme.git
 [submodule "public"]
 	path = public
 	url = git@github.com:berquist/berquist.github.io.git
