update to latest version of cocoa

--- a/config.toml
+++ b/config.toml
@@ -11,35 +11,23 @@ title               = "Eric Berquist"
 pygmentsuseclasses  = true
 # Comment out to disable Disqus.
 # disqusshortname     = "cocoaexamplesite"
+disqusShortname     = ""
 pluralizelisttitles = false
-googleAnalytics     = "UA-123-45"
+# googleAnalytics     = "UA-123-45"
+googleAnalytics     = ""
 
 [permalinks]
 blog  = "blog/:slug/"
 
 [[menu.main]]
 name                   = "Blog"
-weight                 = -120
 identifier             = "blog"
 url                    = "/blog/"
 
 [[menu.main]]
 name                   = "About"
-weight                 = -120
 identifier             = "about"
 url                    = "/about/"
-
-# [[menu.main]]
-# name                   = "Code"
-# weight                 = -120
-# identifier             = "code"
-# url                    = "/code/"
-
-# [[menu.main]]
-# name                   = "Pages"
-# weight                 = -120
-# identifier             = "pages"
-# url                    = "/pages/"
 
 [params]
 # include RSS <link> tag in <head> and show RSS icon
@@ -59,10 +47,7 @@ dateformfull           = "Mon Jan 2 2006 15:04:05 MST"
 extracssfiles          = [ "/css/override.css" ]
 faviconfile            = "img/leaf.ico"
 github                 = "//github.com/berquist"
-# instagram              = "//instagram.com/you"
-# px500                  = "//500px.com/username"
 lang                   = "en"
-# linkedin               = "//linkedin.com/in/you"
 # if true, don't show "<x> minutes read" in posts
 noshowreadtime         = false
 # appears in the site header when set to a non-empty string
@@ -75,21 +60,6 @@ highlightjs            = true
 # additional languages not included in the "common" set
 # highlightjslanguages = ["go"]
 # highlightjsStyle     = "darcula"
-
-# If true, Piwik integration is enabled
-piwik                  = false
-# URL to your Piwik installation. Must End with a slash
-# piwik_url            = "//www.example.com/piwik/"
-# Id of your site in Piwik
-# piwik_id             = 2
-
-gitalk                 = false
-# if gitalk is true, the following params should be set. These parameters could be retrieved from github OAuth
-gitalk_clientID        = "your client id"
-gitalk_clientSecret    = "your client secret"
-gitalk_repo            = "your repo url"
-gitalk_owner           = "the owner of this repo"
-gitalk_admin           = ['a', 'list', 'of', 'administrator']
 
 # path to image in static dir e.g img/avatar.png (do not use in the same time as gravatar)
 # avatar                 = "img/profile.png"
